# synextra

./: .buckconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUCK  README.md  git-worktree-tools.json
.agents/reviews/: spec-review.md
.agents/sessions/: codex-019c6b80-4dd6-78e0-94bd-4aa6f3fe5b3d.json
.agents/skills/react-flow-pipeline-ui/: SKILL.md
.claude/skills/react-flow-pipeline-ui/: examples.md  layout.md  performance.md  reference.md  synextra-pipeline-context.md  theming.md
adrs/: 0001-rag-spec-orchestration.md  README.md
backend/: .gitignore  AGENTS.md  README.md  pyproject.toml
backend/adrs/: 0001-backend-bootstrap-stack.md  0002-pdf-ingestion-and-chunking.md  0003-dual-store-retrieval-and-agent-orchestration.md  0004-real-token-streaming.md  0005-openai-agents-sdk-migration.md  0006-sdk-dependency-inversion.md  0007-live-retrieval-event-streaming.md  0008-backend-direct-sdk-imports.md  README.md
backend/docs/: README.md  backend-bootstrap.md
backend/src/synextra_backend/: __init__.py  app.py  sdk.py
backend/src/synextra_backend/api/: __init__.py  health.py  pipeline.py  rag_chat.py  rag_ingestion.py  rag_persistence.py
backend/src/synextra_backend/handlers/: parser.py
backend/src/synextra_backend/repositories/: __init__.py  rag_document_repository.py
backend/src/synextra_backend/retrieval/: __init__.py  bm25_search.py  evidence_merger.py  openai_file_search.py  types.py
backend/src/synextra_backend/schemas/: __init__.py  errors.py  rag_chat.py  rag_ingestion.py  rag_persistence.py
backend/src/synextra_backend/services/: __init__.py  block_chunker.py  citation_validator.py  document_ingestion.py  document_store.py  embedded_store_persistence.py  openai_vector_store_persistence.py  pdf_ingestion.py  rag_agent_orchestrator.py  rag_document_repository.py  session_memory.py
backend/tasks/: BE-2026-02-17-002.json  BE-2026-02-17-003.json  BE-2026-02-17-004.json  BE-2026-02-18-001.json  BE-2026-02-18-002.json  BE-2026-02-18-003.json  BE-2026-02-18-004.json  BE-2026-02-19-001.json  BE-2026-02-26-001.json  bootstrap_backend_module.json
backend/tests/: conftest.py  test_health_endpoint.py
backend/tests/integration/: test_rag_end_to_end.py
backend/tests/unit/api/: test_pipeline_api.py  test_rag_chat_streaming.py  test_rag_persistence.py
backend/tests/unit/services/: test_block_chunker.py  test_document_store.py  test_openai_vector_store_persistence.py  test_pdf_ingestion.py  test_rag_agent_orchestrator.py
buck-out/v2/: CACHEDIR.TAG
buck-out/v2/log/: 20260217-125257_run_77b5cc22-096e-4986-89c2-80301b54d3cb_events.pb.zst  20260217-125328_run_e6b56319-3d43-42e4-87b1-19dc69a57486_events.pb.zst  20260217-125355_run_ca6ee849-47b8-4445-9d76-53dc35457d6b_events.pb.zst  20260217-125605_run_1de6da36-dc15-4a85-ba7c-4d0f6064df5d_events.pb.zst  20260217-125624_run_5ca01684-32c9-476f-a37d-2452cb1ce9b5_events.pb.zst  20260217-125631_run_3a11fa22-ef12-405d-aaf5-40e4ef79e06d_events.pb.zst  20260217-130857_targets_4d0a519e-f5c8-4687-b394-8ce7d11a8ce3_events.pb.zst  20260217-130857_targets_94dce038-952e-485c-a0ab-3e0afcf560fd_events.pb.zst  20260217-131129_targets_0ff28ed1-629a-402d-9c4e-01fe5979c5b2_events.pb.zst  20260217-131132_run_4818c636-9e66-4f88-90c0-7dd262f34ac7_events.pb.zst  20260217-131149_run_27317421-a09d-4681-9e19-7060af00fbac_events.pb.zst  20260217-131201_targets_fd432095-6f0a-4941-8bb5-181ffe38271c_events.pb.zst
cli/: AGENTS.md  README.md  pyproject.toml
cli/src/synextra_cli/: __init__.py  main.py
cli/tests/: test_cli_smoke.py
frontend/: AGENTS.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/adrs/: 0001-frontend-stack-foundation.md  0002-dark-theme-typography-design-system.md  0003-structured-chat-rendering-and-mode-routing.md  0004-streaming-document-chat-workspace.md  0005-citation-reference-navigation-and-modal.md  README.md
frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/app/builder/: page.tsx
frontend/components/: document-chat-workspace.test.tsx  document-chat-workspace.tsx  integration-demo.test.tsx  integration-demo.tsx
frontend/components/ai-elements/: message-bubble.test.tsx  message-bubble.tsx
frontend/components/builder/: node-config-panel.test.tsx  node-config-panel.tsx  node-palette.tsx  pipeline-builder.tsx  run-toolbar.tsx
frontend/components/chat/: agent-event-renderers.test.tsx  agent-event-renderers.tsx  citation-accordion.test.tsx  citation-accordion.tsx  markdown-response.tsx  reasoning-effort-selector.tsx  retrieval-mode-selector.tsx  structured-message.test.tsx  structured-message.tsx  thinking-panel.test.tsx  thinking-panel.tsx
frontend/components/ui/: animated-input.test.tsx  animated-input.tsx  button.test.tsx  button.tsx  shader-background.test.tsx  shader-background.tsx
frontend/docs/: README.md  frontend-foundation.md  rag-ui-spec.md
frontend/lib/: utils.test.ts
frontend/lib/builder/: dag-validation.ts  executor.ts  layout.ts  (+5 more)
frontend/tasks/: FE-2026-02-17-001.json  FE-2026-02-17-002.json  FE-2026-02-17-003.json  FE-2026-02-17-004.json  FE-2026-02-17-005.json  FE-2026-02-18-001.json  FE-2026-02-18-002.json  FE-2026-02-18-003.json  FE-2026-02-18-004.json  README.md
frontend/test/: setup.ts
sdk/: AGENTS.md  README.md  pyproject.toml
sdk/adrs/: 0001-self-contained-sdk-and-cli-split.md  0002-azure-openai-compatible-config.md  README.md
sdk/src/synextra/: __init__.py  client.py
sdk/src/synextra/repositories/: rag_document_repository.py
sdk/src/synextra/retrieval/: bm25_search.py
sdk/src/synextra/schemas/: __init__.py  pipeline.py  rag_chat.py
sdk/src/synextra/services/: __init__.py  block_chunker.py  citation_validator.py  document_ingestion.py  document_store.py  embedded_store_persistence.py  pipeline_runtime.py  rag_agent_orchestrator.py  session_memory.py
sdk/tests/: test_sdk_ingest.py  test_sdk_openai_config.py
tasks/: PRJ-2026-02-17-001.json
toolchains/: BUCK
tools/buck/: backend.sh  cli.sh  frontend.sh  memory.sh  sdk.sh  workspace.sh
tools/pre-commit/: run-formatter.sh  run-lint.sh  run-tests.sh
(+54 files in other folders)
