[project]
name = "synextra-backend"
version = "0.1.0"
description = "FastAPI backend service for Synextra."
readme = "README.md"
authors = [
    { name = "agentmish", email = "rodat.dev@proton.me" }
]
requires-python = ">=3.14"
dependencies = [
    "synextra>=0.1.0",
    "fastapi>=0.129.0",
    "python-multipart>=0.0.9",
    "anyio>=4.0.0",
    "pymupdf>=1.27.1",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "openai>=1.0.0",
    "tenacity>=8.2.3",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.41.0",
    "openai-agents>=0.9.1",
]

[project.scripts]
synextra-backend = "synextra_backend.app:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    'ignore:The global interpreter lock \(GIL\) has been enabled to load module .*pymupdf\._extra.*:RuntimeWarning',
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
    "ANN",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
]
ignore = [
    "ANN401",
]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
python_version = "3.14"
strict = true
warn_unused_configs = true

[tool.uv.sources]
synextra = { path = "../sdk", editable = true }
