[project]
name = "synextra-cli"
version = "0.1.0"
description = "CLI for Synextra SDK."
readme = "README.md"
authors = [
  { name = "agentmish", email = "rodat.dev@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
  "synextra>=0.1.0",
  "typer>=0.15.0",
]

[project.scripts]
synextra = "synextra_cli.main:app"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
synextra = { path = "../sdk", editable = true }

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "ruff>=0.15.1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
  'ignore:The global interpreter lock \(GIL\) has been enabled to load module .*pymupdf\._extra.*:RuntimeWarning',
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
  "ANN",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
]
ignore = [
  "ANN401",
]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
python_version = "3.12"
strict = true
warn_unused_configs = true
