[project]
name = "synextra"
version = "0.1.0"
description = "Python SDK for Synextra document ingestion and grounded QA."
readme = "README.md"
authors = [
  { name = "agentmish", email = "rodat.dev@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
  "docx>=0.2.4",
  "openai>=1.0.0",
  "openai-agents>=0.9.1",
  "openpyxl>=3.1.5",
  "pydantic>=2.11.0",
  "pymupdf>=1.27.1",
  "python-docx>=1.1.2",
  "rank-bm25>=0.2.2",
  "tiktoken>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
  'ignore:The global interpreter lock \(GIL\) has been enabled to load module .*pymupdf\._extra.*:RuntimeWarning',
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
  "ANN",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
]
ignore = [
  "ANN401",
]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
python_version = "3.12"
strict = true
warn_unused_configs = true
